# PrayerTimes

./: README.md
S3Watch/components/bsp_extra/: CMakeLists.txt  idf_component.yml
S3Watch/components/bsp_extra/include/: bsp_board_extra.h  pcf85063a.h  rtc_lib.h
S3Watch/components/bsp_extra/src/: bsp_board_extra.c  pcf85063a.c  rtc_lib.c
S3Watch/components/gui/: CMakeLists.txt
S3Watch/components/gui/font/: font_bold_26.c  font_bold_28.c  font_bold_32.c  font_bold_42.c  font_normal_26.c  font_normal_28.c  font_normal_32.c  font_normal_42.c  font_numbers_160.c  font_numbers_80.c
S3Watch/components/gui/icons/: background_wf.c  image_battery_48.c  image_battery_icon.c  image_bluetooth_icon.c  image_brightness_48.c  image_brightness_icon.c  image_call_48.c  image_flashlight_icon.c  image_gmail_48.c  image_instagram_48.c  image_messenger_48.c  image_notification_48.c  image_outlook_48.c  image_settings_icon.c  image_silence_icon.c  image_sms_48.c  image_teams_48.c  image_telegram_48.c  image_tiktok_48.c  image_walk_48.c  image_whatsapp_48.c  image_x_48.c  image_youtube_48.c
S3Watch/components/gui/include/: batt_screen.h  brightness_screen.h  lvgl_spiffs_fs.h  notifications.h  setting_flashlight_screen.h  setting_sound_screen.h  setting_step_goal_screen.h  setting_storage_screen.h  setting_timeout_screen.h  settings_menu_screen.h  settings_screen.h  steps_screen.h  storage_file_explorer.h  ui.h  ui_fonts.h  watchface.h
S3Watch/components/gui/src/: batt_screen.c  brightness_screen.c  lvgl_spiffs_fs.c  notifications.c  setting_flashlight_screen.c  settings_screen.c  (+8 more)
(+138 files in other folders)
